// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContentsListItem renders correctly when active or inactive 1`] = `
<DocumentFragment>
  <li
    class="listItem listItemActive"
    style="--contents-depth: 0;"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink link"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-1"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 1
      </span>
    </a>
  </li>
  <li
    class="listItem"
    style="--contents-depth: 0;"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink link"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-2"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`ContentsListItem renders with different depths 1`] = `
<DocumentFragment>
  <li
    class="listItem"
    style="--contents-depth: 0;"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink link"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-1"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 1
      </span>
    </a>
  </li>
  <li
    class="listItem"
    style="--contents-depth: 1;"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink link"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-2"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;
